Downgrade to Java 11, mostly for compatibility with Azure